--- a/Mandelbrot/Mandelbrot.vcxproj
+++ b/Mandelbrot/Mandelbrot.vcxproj
@@ -146,12 +146,12 @@
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2.lib" />
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2main.lib" />
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2test.lib" />
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2.lib" />
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2main.lib" />
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2test.lib" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\SDL2-2.0.12\lib\x64\SDL2.dll" />
+    <None Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2.dll" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
