--- a/Mandelbrot/Mandelbrot.vcxproj.filters
+++ b/Mandelbrot/Mandelbrot.vcxproj.filters
@@ -20,18 +20,18 @@
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2.lib">
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2main.lib">
       <Filter>Header Files</Filter>
     </Library>
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2main.lib">
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2test.lib">
       <Filter>Header Files</Filter>
     </Library>
-    <Library Include="..\SDL2-2.0.12\lib\x64\SDL2test.lib">
+    <Library Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2.lib">
       <Filter>Header Files</Filter>
     </Library>
   </ItemGroup>
   <ItemGroup>
-    <None Include="..\SDL2-2.0.12\lib\x64\SDL2.dll">
+    <None Include="..\SDL2-2.0.12\lib\x64_SDL\SDL2.dll">
       <Filter>Header Files</Filter>
     </None>
   </ItemGroup>
